Aug 28, 2003

  * FIXED: Complete rewrite of library(socket) for MS-Windows.

Jun 2, 2003

  * FIXED: time:remove_alarm/1 for MS-WIndows.  Mike Elston.

Mar 14, 2003

  * ADDED: Code to make sockets cooperate with signals, so
    call_with_time_limit/2 works on blocking socket operations.

  * FIXED: Error handling on sockets (Windows)

  * FIXED: call_with_time_limit/2 module problem

Feb 2, 2003

  * FIXED: call_with_time_limit/2 if the argument goal fails.  Wouter
    Jansweijer.

Dec 18, 2002

  * FIXED: make all socket calls resume on EINTR (Unix systems).

Dec 7, 2002

  * FIXED: hand open sockets to other threads (blocking problems in Windows).

Dec 6, 2002

  * FIXED: blocking write in sockets and make tcp_close_socket close the
    associated streams (if any).

Dec 4, 2002

  * FIXED: tcp_close_socket/1 to work on the listened socket. Peter Marks.

Dec 2, 2002

 * ADDED: tcp_bind(+Socket, -Port) to bind with an arbitrary free port.

Nov 29, 2002

 * FIXED: MS-Windows tcp_read() not to wait for messages after we have
   seen FD_CLOSE. Holger Kanwischer.

 * ADDED: Make library(socket) suitable for multi-threaded operation in
   MS-Windows. Mike Elston.

Nov 26, 2002

 * ADDED: Make library(time) suitable for multi-threaded operation.

 * ADDED: library(rlimit) for accessing POSIX process limits

Jul 24, 2002

 * ADDED: tcp_setopt(Socket, dispatch(false))

Jun 20, 2002

 * FIXED: Handle WSAEWOULDBLOCK in tcp_acept() to get a blocking accept
   call.

Jun 11, 2002

 * ADDED: library(files), providing uncommon access to file objects.

29/04/2002
  
 * Add initialization to load_foreign_library for calls lacking this.
   Holger Kanwischer.

28/03/2002

 * Record position on socket-streams (SIO_RECORDPOS).

 * Many changes to library(socket): fixes for the Windows implementation,
   dispatch events during tcp_read() while waiting for input.

01/02/2002

 * Modified copyright for compatibility with the now LGPL SWI-Prolog system

07/12/2001
