@@ -1,14 +1,0 @@
-/* Define if you have the nsl library (-lnsl).  */
-#undef HAVE_LIBNSL
-
-/* Define if you have the socket library (-lsocket).  */
-#undef HAVE_LIBSOCKET
-
-/* Define to prepare for multi-threading */
-#undef _REENTRANT
-
-/* Define if socket gives errors using h_error instead of errno */
-#undef HAVE_H_ERRNO
-
-/* Define if #define _XOPEN_SOURCE is allowed */
-#undef DEFINE_XOPEN_SOURCE
